--- a/style.css
+++ b/style.css
@@ -8,9 +8,7 @@ ul {
   margin: 0;
   padding: 0;
   display: inline-block;
- 
 }
-
 
 /* Style the list items */
 ul li {
@@ -47,7 +45,7 @@ ul li.checked {
 
 /* Add a "checked" mark when clicked on */
 ul li.checked::before {
-  content: '';
+  content: "";
   position: absolute;
   border-color: #fff;
   border-style: solid;
@@ -68,16 +66,19 @@ ul li.checked::before {
 }
 
 .close:hover {
-  background-color: #f44336;
+  background-color: crimson;
   color: white;
 }
 
 /* Style the header */
 .header {
-  background-color: #800012;
-  padding: 30px 40px;
-  color: white;
+  background-color: #5a3d2b; /*dark olive green */
+  padding: 10px 10px;
+  margin-bottom: 10px;
+  color: #fdebb4; /* moccasin */
   text-align: center;
+  font-size: 24px;
+  display: flexbox;
 }
 
 /* Clear floats after the header */
@@ -89,55 +90,49 @@ ul li.checked::before {
 
 /* Style the input */
 input {
-  margin: 0;
+  margin-bottom: 10px;
   border: none;
-  border-radius: 0;
-  width: 75%;
+  border-radius: 0px;
+  width: 65%;
   padding: 10px;
   float: left;
   font-size: 16px;
 }
 
 /* Style the "Add" button */
-.button {
+button {
+  border: 2px solid #5a3d2b;
+
   padding: 10px;
-  width: 25%;
-  background: #d9d9d9;
-  color: #555;
-  float: left;
+  margin-right: 16px;
+  width: 15%;
+  color: #36251a;
   text-align: center;
   font-size: 16px;
   cursor: pointer;
   transition: 0.3s;
-  border-radius: 0;
+  border-radius: 5px;
 }
 
-.button:hover {
-  background-color: #bbb;
+button:hover {
+  background-color: #5a3d2b;
+  color: #fdebb4; /* moccasin */
 }
 
-/*backdrop*/
-.backdrop {
-  display: none;
-  position: fixed;
-  background: rgba(0, 0, 0, 0.5);
-  top: 0;
-  height: 100vh;
-  width: 100vw;
-  z-index: 1;
+/* Style the "Add" button */
+.button-bars {
+  background-color: transparent;
+  border: none;
+  color: #fdebb4; /* moccasin */
+  font-size: 16px;
+  cursor: pointer;
+  display: flex;
+  width: 5%;
 }
 
-/*modal window*/
-/*.modal {
-  display: none;
-  position: fixed;
-  background: white;
-  padding: 10px;
-  width: 260px;
-  top: 100px;
-  left: calc(50%-140px);
-  z-index: 1;
-}*/
+.button-bars:hover {
+  background-color: transparent;
+}
 
 /*modal from site*/
 
@@ -151,8 +146,8 @@ input {
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
 /* Modal Header */
@@ -163,7 +158,9 @@ input {
 }
 
 /* Modal Body */
-.modal-body {padding: 2px 16px;}
+.modal-body {
+  padding: 2px 16px;
+}
 
 /* Modal Content/Box */
 .modal-content {
@@ -177,8 +174,14 @@ input {
 
 /* Add Animation */
 @keyframes animatetop {
-  from {top: -300px; opacity: 0}
-  to {top: 0; opacity: 1}
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
 }
 
 /* The Close Button */
@@ -189,7 +192,8 @@ input {
   font-weight: bold;
 }
 
-.close-modal:hover, .close-modal:focus {
+.close-modal:hover,
+.close-modal:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
@@ -199,12 +203,111 @@ input {
   -webkit-column-count: 3; /* Chrome, Safari, Opera */
   -moz-column-count: 3; /* Firefox */
   column-count: 3;
-  -webkit-column-gap: .5rem; /* Chrome, Safari, Opera */
-  -moz-column-gap: .5rem; /* Firefox */
-  column-gap: .5rem;
-
+  -webkit-column-gap: 0.5rem; /* Chrome, Safari, Opera */
+  -moz-column-gap: 0.5rem; /* Firefox */
+  column-gap: 0.5rem;
 }
 .note {
   width: calc(100% / 1);
   padding-right: 36px;
+}
+
+/*try this new*/
+
+div {
+  padding: 5px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+div h1 {
+  text-align: center;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+section {
+  border: 1px;
+  padding: 5px;
+}
+/*
+input[type=text] {
+    margin-top:10px;
+    
+    padding: 16px;
+    width: 30%;
+    
+    font-size: 16px;
+}*/
+
+/*could be the same as ul li - check*/
+div.listItem {
+  cursor: pointer;
+  position: relative;
+  padding: 12px 8px 12px 40px;
+  background: #eee;
+  font-size: 18px;
+  transition: 0.2s;
+  height: 46px;
+
+  /* make the list items unselectable */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Set all odd list items to a different color (zebra-stripes) */
+div.listItem:nth-child(odd) {
+  background: #f9f9f9;
+}
+
+/* Darker background-color on hover */
+div.listItem:hover {
+  background: #ddd;
+}
+
+/* When clicked on, add a background color and strike out text */
+div.listItem:checked {
+  background: #888;
+  color: #fff;
+  text-decoration: line-through;
+}
+
+input[type="checkbox"] {
+  height: 20px;
+  width: 15px;
+}
+h3 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  text-align: center;
+  height: 46px;
+  font-size: 22px;
+}
+
+.checkbox {
+  visibility: hidden;
+}
+
+.label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  /* border: 2px solid crimson;
+  border-radius: 4px; */
+  transition: all 0.5s;
+  padding-left: 10px;
+}
+
+.checkbox:checked + .label {
+  background: #888;
+  color: #fff;
+  text-decoration: line-through;
 }
