--- a/style.css
+++ b/style.css
@@ -34,9 +34,13 @@
   clear: both;
 }
 
+h3 {
+  margin-bottom: 16px;
+  margin-top: 16px;
+}
+
 /* Style the input */
-input     /* margin-bottom: 10px; */
- {
+input {
   border: none;
   border-radius: 5px;
   padding: 10px;
@@ -48,7 +52,6 @@ input     /* margin-bottom: 10px; */
 /* Style the "Add" button */
 button {
   border: 2px solid #5a3d2b;
-
   padding: 10px;
   margin-left: 10px;
   color: #36251a;
@@ -65,7 +68,7 @@ button:hover {
   color: #fdebb4; /* moccasin */
 }
 
-/* Style the "Add" button */
+/* Style the menu button */
 .button-bars {
   background-color: transparent;
   border: none;
@@ -80,6 +83,11 @@ button:hover {
   background-color: transparent;
 }
 
+/*signout button*/
+.signOut {
+  background-color: transparent;
+}
+
 .modal {
   display: none;
   position: fixed;
@@ -87,7 +95,6 @@ button:hover {
   left: 0;
   top: 0;
   width: 100%;
-
   overflow: auto;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
@@ -105,10 +112,10 @@ button:hover {
 
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto; /* 5% from the top and centered */
+  margin: 15% auto;
   padding: 10px;
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 80%;
   height: 50%;
 }
 
@@ -153,6 +160,7 @@ button:hover {
   width: 100%;
   padding: 12px 8px 12px 40px;
   margin: 0 auto;
+  margin-top: 10px;
   background: #eee;
   font-size: 18px;
   transition: 0.2s;
@@ -193,6 +201,7 @@ button:hover {
 .new-item-form {
   display: flex;
   align-items: center;
+  margin-top: 10px;
 }
 
 .new-list-form {
@@ -223,20 +232,19 @@ button:hover {
 .closebtn:hover {
   color: #000;
 }
-/*========================================================================*/
-/*sidebar nav*/
+
 /* The side navigation menu */
 .sidenav {
-  height: 100%; /* 100% Full-height */
+  height: 100%;
   width: 250px;
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Stay on top */
-  top: 0; /* Stay at the top */
+  position: fixed;
+  z-index: 1;
+  top: 0;
   left: 0;
   background-color: #5a3d2b;
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 60px; /* Place content 60px from the top */
-  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  overflow-x: hidden;
+  padding-top: 60px;
+  transition: 0.5s;
   transform: translateX(-250px);
 }
 
@@ -248,34 +256,17 @@ section {
   position: relative;
 }
 
-/* The navigation menu links */
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-/* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
   color: #f1f1f1;
 }
 
-/* Position and style the close button (top right corner) */
 .sidenav .closebtn {
   position: absolute;
   top: 0;
   right: 25px;
   font-size: 36px;
   margin-left: 50px;
-}
-
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#main {
-  transition: margin-left 0.5s;
-  padding: 20px;
+  text-decoration: none;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
