--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ button:hover {
   left: 0;
   top: 0;
   width: 100%;
+  height: 100vh;
   overflow: auto;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
@@ -122,7 +123,6 @@ button:hover {
   padding: 10px;
   border: 1px solid #888;
   width: 80%;
-  height: 50%;
 }
 
 /* Add Animation */
